--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "express-handlebars": "^3.1.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
     "mongoose": "^5.8.5",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.0.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
