--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "stripe": "^8.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
